--- a/banker/index.html
+++ b/banker/index.html
@@ -193,7 +193,7 @@
                   <li><a href="#"><span class="icon-linkedin"></span></a></li>
                   <li><a href="#"><span class="icon-instagram"></span></a></li>
                 </ul>
-                <img src="images/person_5.jpg" alt="Image" class="img-fluid">
+                <img src="images/padanub.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Padanub</h3>
@@ -211,7 +211,7 @@
                   <li><a href="#"><span class="icon-linkedin"></span></a></li>
                   <li><a href="#"><span class="icon-instagram"></span></a></li>
                 </ul>
-                <img src="images/person_6.jpg" alt="Image" class="img-fluid">
+                <img src="images/stridey.jpeg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Strideynet</h3>
