--- a/banker/index.html
+++ b/banker/index.html
@@ -745,7 +745,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
-            <h2 class="section-title mb-3">Our Blog</h2>
+            <h2 class="section-title mb-3">Careers</h2>
           </div>
         </div>
 
@@ -755,13 +755,13 @@
               <a href="single.html">
                 <img src="images/img_1.jpg" alt="Image" class="img-fluid">
               </a>
-              <h2 class="font-size-regular"><a href="#">A Basic Guide to Starting a Franchise in the Philippines</a>
+              <h2 class="font-size-regular"><a href="#">Front-End Developer</a>
               </h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2019<span
-                  class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente
-                veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <div class="meta mb-4">Volunteer <span class="mx-2">&bullet;</span> March 12 2020<span
+                  class="mx-2">&bullet;</span> <a href="#">Jobs</a></div>
+              <p>Nub Bank is looking for a front-end developer to help with the interface development of our banking
+                site, high-level knowledge of HTML, CSS, Javascript and Bootstrap is required.</p>
+              <p><a href="#">Get the Job Spec...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
@@ -769,13 +769,13 @@
               <a href="single.html">
                 <img src="images/img_4.jpg" alt="Image" class="img-fluid">
               </a>
-              <h2 class="font-size-regular"><a href="#">A Basic Guide to Starting a Franchise in the Philippines</a>
+              <h2 class="font-size-regular"><a href="#">Back-End Developer</a>
               </h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span
-                  class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente
-                veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <div class="meta mb-4">Volunteer <span class="mx-2">&bullet;</span> March 12 2020<span
+                  class="mx-2">&bullet;</span> <a href="#">Jobs</a></div>
+              <p>Nub Bank is looking for a back-end developer to help link everything up and keep our site running
+                efficiently.</p>
+              <p><a href="#">Get the Job Spec...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
@@ -783,13 +783,14 @@
               <a href="single.html">
                 <img src="images/img_3.jpg" alt="Image" class="img-fluid">
               </a>
-              <h2 class="font-size-regular"><a href="#">A Basic Guide to Starting a Franchise in the Philippines</a>
+              <h2 class="font-size-regular"><a href="#">Economic Consultant</a>
               </h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span
-                  class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente
-                veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <div class="meta mb-4">Volunteer <span class="mx-2">&bullet;</span> March 12 2020<span
+                  class="mx-2">&bullet;</span> <a href="#">Jobs</a></div>
+              <p>We run an economy! We need your help! Nub Bank has certain economic issues due to its high-value only
+                customers as well as it's accelerated timespans. We are looking for an economic consultant to help us
+                keep our economy steady and floating.</p>
+              <p><a href="#">Get the Job Spec...</a></p>
             </div>
           </div>
 
