--- a/banker/index.html
+++ b/banker/index.html
@@ -186,10 +186,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/padanub"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/padanub.jpg" alt="Image" class="img-fluid">
               </figure>
@@ -204,10 +201,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/Strideynet"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/stridey.jpeg" alt="Image" class="img-fluid">
               </figure>
@@ -222,10 +216,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/Model-Duck"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/rsz_1rsz_duck.jpg" alt="Image" class="img-fluid">
               </figure>
@@ -240,10 +231,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/Ohprkl"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/person_8.jpg" alt="Image" class="img-fluid">
               </figure>
@@ -258,10 +246,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/Confessions_GB"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/rsz_2rsz_1rsz_24923.jpg" alt="Image" class="img-fluid">
               </figure>
@@ -276,10 +261,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/Leafy_Emerald"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/leafyemerald.png" alt="Image" class="img-fluid">
               </figure>
@@ -294,10 +276,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/DrCaeserMD"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/Caeser.jpg" alt="Image" class="img-fluid">
               </figure>
@@ -312,10 +291,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                  <li><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/_Paul_Rand_"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/RandPaul.jpg" alt="Image" class="img-fluid">
               </figure>
@@ -761,7 +737,6 @@
                   class="mx-2">&bullet;</span> <a href="#">Jobs</a></div>
               <p>Nub Bank is looking for a front-end developer to help with the interface development of our banking
                 site, high-level knowledge of HTML, CSS, Javascript and Bootstrap is required.</p>
-              <p><a href="#">Get the Job Spec...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
@@ -775,7 +750,6 @@
                   class="mx-2">&bullet;</span> <a href="#">Jobs</a></div>
               <p>Nub Bank is looking for a back-end developer to help link everything up and keep our site running
                 efficiently.</p>
-              <p><a href="#">Get the Job Spec...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
@@ -790,7 +764,6 @@
               <p>We run an economy! We need your help! Nub Bank has certain economic issues due to its high-value only
                 customers as well as it's accelerated timespans. We are looking for an economic consultant to help us
                 keep our economy steady and floating.</p>
-              <p><a href="#">Get the Job Spec...</a></p>
             </div>
           </div>
 
@@ -870,40 +843,9 @@
             <div class="row">
               <div class="col-md-5">
                 <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum
-                  autem. Amet aliquid nesciunt veritatis aliquam.</p>
-              </div>
-              <div class="col-md-3 ml-auto">
-                <h2 class="footer-heading mb-4">Quick Links</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#about-section" class="smoothscroll">Terms</a></li>
-                  <li><a href="#about-section" class="smoothscroll">Policy</a></li>
-                  <li><a href="#about-section" class="smoothscroll">About Us</a></li>
-                  <li><a href="#services-section" class="smoothscroll">Services</a></li>
-                  <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-                  <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3 footer-social">
-                <h2 class="footer-heading mb-4">Follow Us</h2>
-                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                <p>We provide some of the most elite banking services to the Model World and it's patrons.</p>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post" class="footer-subscribe">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control border-secondary text-white bg-transparent"
-                  placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
-                </div>
-              </div>
-            </form>
           </div>
         </div>
         <div class="row pt-5 mt-5 text-center">
