--- a/banker/index.html
+++ b/banker/index.html
@@ -246,7 +246,7 @@
             <div class="team-member">
               <figure>
                 <ul class="social">
-                  <li><a href="https://www.reddit.com/user/Confessions_GB"><span class="icon-reddit"></span></a></li>
+                  <li><a href="https://www.reddit.com/user/Confessions_GB_"><span class="icon-reddit"></span></a></li>
                 </ul>
                 <img src="images/rsz_2rsz_1rsz_24923.jpg" alt="Image" class="img-fluid">
               </figure>
