Lots of changes (see desc.)
Removed mentions of "Model World" and change to MHOC and UK

Made the Image alt's relevent

Added a link to Stridey's reddit account on the "Our History" section

Removed Americanisms (smh)

Wording changes

Grammar

Removed some comments relating to the template.

--- a/banker/index.html
+++ b/banker/index.html
@@ -107,7 +107,7 @@
               <div class="slide">
                 <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
                 <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Easy to use banking facilities to allow
-                  Model Worlders
+                  MHOCers
                   to claim their salaries and spend their money with discreet efficiency and absolute security.
                 </p>
                 <div data-aos="fade-up" data-aos-delay="100">
@@ -141,13 +141,13 @@
           <div class="col-md-8 text-center">
             <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">About Us</h2>
             <p class="lead" data-aos="fade-up" data-aos-delay="100">We are the premier (and only) banking solution for
-              the Model World, with a storied history of sweat and google sheets.</p>
+              the UK, with a storied history of sweat and google sheets.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <figure class="circle-bg">
-              <img src="images/hero_1.jpg" alt="Free Website Template by Free-Template.co" class="img-fluid">
+              <img src="images/hero_1.jpg" alt="Our History" class="img-fluid">
             </figure>
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -156,10 +156,10 @@
 
             <p>Nub Bank has had a rocky start to it's life. Beginning as ModelBarclays on a poor old google sheet, using
               archaic formula and obscene macros. Our founder decided a change was needed. Under his guidance and the
-              technical expertise of /u/Strideynet, we were built into the challenger we are today with our own
+              technical expertise of <a href="https://reddit.com/u/Strideynet/">/u/Strideynet</a>, we were built into the challenger we are today with our own
               integrated web app.</p>
 
-            <p>We specialize in dealing with politically exposed clients and helping them with their banking and wealth
+            <p>We specialise in dealing with politically exposed clients and helping them with their banking and wealth
               management needs, ensuring they have access to their money and have the capability to invest or spend it
               at all times.</p>
 
@@ -344,13 +344,13 @@
               </div>
               <div>
                 <h2 class="section-title mb-3">02. Wait for approval</h2>
-                <p>Our staff will look through your application and after approval will set you up on the account and
-                  will get everything ready for you, once the account is ready, we'll be in touch.</p>
+                <p>Our staff will look through your application and after approval, will set you up on the account and
+                  get everything ready for you. Once the account is ready, we'll be in touch.</p>
               </div>
               <div>
                 <h2 class="section-title mb-3">03. Get Started</h2>
                 <p>You've got your account, you've been shown how to login, now is the time to claim your salary and
-                  let's get into it!</p>
+                  get into it!</p>
 
                 <p><a href="https://bank.nub.international/" class="btn btn-primary mr-2 mb-2">Login</a></p>
               </div>
@@ -376,7 +376,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4">
               <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/001-wallet.svg" alt="Free Website Template by Free-Template.co"
+                <img src="images/flaticon-svg/svg/001-wallet.svg" alt="Business Banking"
                   class="img-fluid w-25 mb-4">
               </div>
               <div>
@@ -389,7 +389,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="unit-4">
               <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/006-credit-card.svg" alt="Free Website Template by Free-Template.co"
+                <img src="images/flaticon-svg/svg/006-credit-card.svg" alt="Personal Banking"
                   class="img-fluid w-25 mb-4">
               </div>
               <div>
@@ -401,7 +401,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="unit-4">
               <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/002-rich.svg" alt="Free Website Template by Free-Template.co"
+                <img src="images/flaticon-svg/svg/002-rich.svg" alt="Betting"
                   class="img-fluid w-25 mb-4">
               </div>
               <div>
@@ -415,7 +415,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
             <div class="unit-4">
               <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/003-notes.svg" alt="Free Website Template by Free-Template.co"
+                <img src="images/flaticon-svg/svg/003-notes.svg" alt="Live up-to-date information"
                   class="img-fluid w-25 mb-4">
               </div>
               <div>
@@ -427,7 +427,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="unit-4">
               <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/004-cart.svg" alt="Free Website Template by Free-Template.co"
+                <img src="images/flaticon-svg/svg/004-cart.svg" alt="Asset Investment"
                   class="img-fluid w-25 mb-4">
               </div>
               <div>
@@ -440,7 +440,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="unit-4">
               <div class="unit-4-icon">
-                <img src="images/flaticon-svg/svg/005-megaphone.svg" alt="Free Website Template by Free-Template.co"
+                <img src="images/flaticon-svg/svg/005-megaphone.svg" alt="Unlimited Possibilities"
                   class="img-fluid w-25 mb-4">
               </div>
               <div>
@@ -628,7 +628,7 @@
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
               <h3 class="text-black h4 mb-4">Wait, you charge tax?</h3>
               <p>Sure do, we charge tax based on the rates of Income Tax in the most recent passed budget on MHOC. We do
-                not simulated National Insurance or Capital Gains. Due to the volume and size of the
+                not simulate National Insurance or Capital Gains. Due to the volume and size of the
                 transactions that happen within our economy, we've have to implement a transaction fee *gasp*. You can
                 see a list of them above in the accounts summary. These can change, but everyone will be notified in
                 advance.</p>
@@ -682,7 +682,7 @@
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
               <h3 class="text-black h4 mb-4">Will businesses need to file accounts?</h3>
-              <p>Businesses will need to file accounts at a yet to be determined interval, these accounts will help the
+              <p>Businesses will need to file accounts at a yet to be determined interval. These accounts will help the
                 bank with business valuation and general housekeeping. Businesses that do not submit in time will be
                 sanctioned. If you need an accountant, I'm sure there'll be a business for that!</p>
             </div>
@@ -690,7 +690,7 @@
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
               <h3 class="text-black h4 mb-4">How do businesses get regular income and pay staff?</h3>
               <p>Some businesses will have difficulty staying afloat as the nature of their work is unpredictable (see
-                Press Work) Nub Bank wants to support these businesses. Once your business is open you'll receive an
+                Press Work). Nub Bank wants to support these businesses. Once your business is open, you'll receive an
                 Articles of Association asset, which guarantees you a small minimum income (randomly generated based on
                 your
                 sector). If staff want to draw a wage from a business, they will need to do so from that business
@@ -843,7 +843,7 @@
             <div class="row">
               <div class="col-md-5">
                 <h2 class="footer-heading mb-4">About Us</h2>
-                <p>We provide some of the most elite banking services to the Model World and it's patrons.</p>
+                <p>We provide some of the most elite banking services to the UK and it's patrons.</p>
               </div>
             </div>
           </div>
@@ -852,12 +852,10 @@
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p class="copyright"><small>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                   Copyright &copy;
                   <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
                   with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                    target="_blank">Colorlib</a>
-                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small></p>
+                    target="_blank">Colorlib</a></small></p>
 
             </div>
           </div>
