--- a/banker/index.html
+++ b/banker/index.html
@@ -251,7 +251,7 @@
                 <img src="images/rsz_2rsz_1rsz_24923.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
-                <h3>Confessions_GB</h3>
+                <h3>Confessions_GB_</h3>
                 <span class="position">Chief Experience Officer</span>
               </div>
             </div>
@@ -852,7 +852,7 @@
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p class="copyright"><small>
-                  Copyright &copy;
+                  Copyright &copy; Padanub & Confessions_GB_
                   <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
                   with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
                     target="_blank">Colorlib</a></small></p>
