--- a/banker/index.html
+++ b/banker/index.html
@@ -852,8 +852,8 @@
           <div class="col-md-12">
             <div class="border-top pt-5">
               <p class="copyright"><small>
-                  Copyright &copy; Padanub & Confessions_GB_
-                  <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
+                  &copy; Padanub & Confessions_GB_<br>
+                  This template is made
                   with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com"
                     target="_blank">Colorlib</a></small></p>
 
