--- a/banker/index.html
+++ b/banker/index.html
@@ -71,10 +71,10 @@
                   <a href="#about-section" class="nav-link">About Us</a>
                   <ul class="dropdown">
                     <li><a href="#team-section" class="nav-link">Team</a></li>
-                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
-                    <li><a href="#careers-section" class="nav-link">Careers</a></li>
                     <li><a href="#services-section" class="nav-link">Services</a></li>
+                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
+                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>		
+                    <li><a href="#careers-section" class="nav-link">Careers</a></li>
                     <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
                   </ul>
                 </li>
@@ -454,71 +454,6 @@
       </div>
     </section>
 
-    <section class="site-section testimonial-wrap" id="testimonials-section" data-aos="fade">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Happy Customers</h2>
-          </div>
-        </div>
-      </div>
-      <div class="slide-one-item home-slider owl-carousel">
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;Thanks to Nub Bank, I've grabbed the corporate jet and nub's credit card and I'm heading to
-                France with a sniper rifle and my own skiing gear.&rdquo;</p>
-            </blockquote>
-
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <p>Ohprkl</p>
-            </figure>
-          </div>
-        </div>
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;HELLO DID WE LAUNCH YET?.&rdquo;</p>
-            </blockquote>
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <p>Dickie_Knee</p>
-            </figure>
-
-          </div>
-        </div>
-
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;I just want my bank account for gods sake.&rdquo;</p>
-            </blockquote>
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <p>Alexa (not the amazon one)</p>
-            </figure>
-
-
-          </div>
-        </div>
-
-        <div>
-          <div class="testimonial">
-
-            <blockquote class="mb-5">
-              <p>&ldquo;I use nub money to pay people do wiki work for me. I haven't had wiki updates since nub bank
-                closed.&rdquo;</p>
-            </blockquote>
-            <figure class="mb-4 d-flex align-items-center justify-content-center">
-              <p>ARichTeaBiscuit</p>
-            </figure>
-
-          </div>
-        </div>
-
-      </div>
-    </section>
 
     <section class="site-section bg-light" id="pricing-section">
       <div class="container">
@@ -717,7 +652,7 @@
       </div>
     </section>
 
-    <section class="site-section" id="careers-section">
+    <section class="site-section border-bottom" id="careers-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center" data-aos="fade">
@@ -765,7 +700,71 @@
       </div>
     </section>
 
+    <section class="site-section testimonial-wrap" id="testimonials-section" data-aos="fade">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-12 text-center">
+            <h2 class="section-title mb-3">Happy Customers</h2>
+          </div>
+        </div>
+      </div>
+      <div class="slide-one-item home-slider owl-carousel">
+        <div>
+          <div class="testimonial">
 
+            <blockquote class="mb-5">
+              <p>&ldquo;Thanks to Nub Bank, I've grabbed the corporate jet and nub's credit card and I'm heading to
+                France with a sniper rifle and my own skiing gear.&rdquo;</p>
+            </blockquote>
+
+            <figure class="mb-4 d-flex align-items-center justify-content-center">
+              <p>Ohprkl</p>
+            </figure>
+          </div>
+        </div>
+        <div>
+          <div class="testimonial">
+
+            <blockquote class="mb-5">
+              <p>&ldquo;HELLO DID WE LAUNCH YET?.&rdquo;</p>
+            </blockquote>
+            <figure class="mb-4 d-flex align-items-center justify-content-center">
+              <p>Dickie_Knee</p>
+            </figure>
+
+          </div>
+        </div>
+
+        <div>
+          <div class="testimonial">
+
+            <blockquote class="mb-5">
+              <p>&ldquo;I just want my bank account for gods sake.&rdquo;</p>
+            </blockquote>
+            <figure class="mb-4 d-flex align-items-center justify-content-center">
+              <p>Alexa (not the amazon one)</p>
+            </figure>
+
+
+          </div>
+        </div>
+
+        <div>
+          <div class="testimonial">
+
+            <blockquote class="mb-5">
+              <p>&ldquo;I use nub money to pay people do wiki work for me. I haven't had wiki updates since nub bank
+                closed.&rdquo;</p>
+            </blockquote>
+            <figure class="mb-4 d-flex align-items-center justify-content-center">
+              <p>ARichTeaBiscuit</p>
+            </figure>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
 
 
     <section class="site-section bg-light" id="signup-section" data-aos="fade">
