--- a/banker/index.html
+++ b/banker/index.html
@@ -233,7 +233,7 @@
                 <ul class="social">
                   <li><a href="https://www.reddit.com/user/Ohprkl"><span class="icon-reddit"></span></a></li>
                 </ul>
-                <img src="images/person_8.jpg" alt="Image" class="img-fluid">
+                <img src="images/ohprkl.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Ohprkl</h3>
