Formatting & Content Updates
Updated pricing section with TX fee and Nub Saver, updated formatting and some content wording

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               technical expertise of <a href="https://reddit.com/u/Strideynet/">/u/Strideynet</a>, we were built into
               the challenger we are today with our own
               integrated web app.</p>
-
+            <br>
             <p>We specialise in dealing with politically exposed clients and helping them with their banking and wealth
               management needs, ensuring they have access to their money and have the capability to invest or spend it
               at all times.</p>
@@ -253,7 +253,7 @@
               </figure>
               <div class="p-3">
                 <h3>Ohprkl</h3>
-                <span class="position">Group Chief Technical</span>
+                <span class="position">Group Technical Liaison</span>
               </div>
             </div>
           </div>
@@ -268,7 +268,7 @@
               </figure>
               <div class="p-3">
                 <h3>Confessions_GB_</h3>
-                <span class="position">Chief Experience Officer</span>
+                <span class="position">Group Chief Experience Officer</span>
               </div>
             </div>
           </div>
@@ -330,8 +330,8 @@
         <div class="row mb-5 justify-content-center">
           <div class="col-md-7 text-center">
             <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">How It Works</h2>
-            <p class="lead" data-aos="fade-up" data-aos-delay="100">You look like you want an account, well here's the
-              process.</p>
+            <p class="lead" data-aos="fade-up" data-aos-delay="100">Our accounts are easy-to-use and easy to open, all
+              you need to do is follow the steps below.</p>
           </div>
         </div>
 
@@ -354,7 +354,8 @@
             <div class="owl-carousel slide-one-item-alt-text">
               <div>
                 <h2 class="section-title mb-3">01. Online Application</h2>
-                <p>All users start with a Basics account, to get one, use the sign up button below.</p>
+                <p>All users start with a Basics account, to get one, use the sign up button below, which will fire off
+                  your application to our team.</p>
 
                 <p><a href="#signup-section" class="btn btn-primary mr-2 mb-2">Sign Up</a></p>
               </div>
@@ -434,7 +435,8 @@
               </div>
               <div>
                 <h3>Live up-to-date information</h3>
-                <p>Access your account 24/7, round the clock. With the latest tax information from MHOC.</p>
+                <p>Access your account 24/7, round the clock. With the latest economic information from <a
+                    href="https://www.reddit.com/r/mhoc">/r/MHOC.</a></p>
               </div>
             </div>
           </div>
@@ -476,11 +478,11 @@
           </div>
         </div>
         <div class="row mb-5">
-          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="">
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-3" data-aos="fade-up" data-aos-delay="">
             <div class="pricing">
               <h3 class="text-center text-black">Basics Account</h3>
               <div class="price text-center mb-4 ">
-                <span><span>FREE</span> / forever</span>
+                <span><span>FREE</span> / forever 1.5% TX</span>
               </div>
               <ul class="list-unstyled ul-check success mb-5">
 
@@ -491,51 +493,69 @@
                 <li class="remove">Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#" class="btn btn-secondary">DM Nub for Details</a>
+                <a href="#signup-section" class="btn btn-secondary">Apply</a>
               </p>
             </div>
           </div>
 
-          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4 pricing-popular" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-3 pricing-popular" data-aos="fade-up" data-aos-delay="100">
             <div class="pricing">
               <h3 class="text-center text-black">Prime Account</h3>
               <div class="price text-center mb-4 ">
-                <span><span>£50,000</span> / one-off</span>
+                <span><span>£50,000</span> / one-off / 0.5% TX</span>
               </div>
               <ul class="list-unstyled ul-check success mb-5">
 
                 <li>Earn salary from your job</li>
                 <li>Make bets on current events</li>
                 <li>Invest and trade in assets</li>
-                <li>Earn interest on your balance</li>
+                <li>Earn 10% interest on your balance</li>
                 <li class="remove">Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#" class="btn btn-primary">DM Nub for Details</a>
+                <a href="#signup-section" class="btn btn-primary">Apply</a>
               </p>
             </div>
           </div>
 
-          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-3" data-aos="fade-up" data-aos-delay="200">
             <div class="pricing">
-              <h3 class="text-center text-black">Business Account</h3>
+              <h3 class="text-center text-black">SME Account</h3>
               <div class="price text-center mb-4 ">
-                <span><span>£75,000</span> / one off</span>
+                <span><span>£75,000</span> / one off / 1% TX</span>
               </div>
               <ul class="list-unstyled ul-check success mb-5">
 
                 <li class="remove">Earn salary from your job</li>
                 <li>Make bets on current events</li>
                 <li>Invest and trade in assets</li>
-                <li>Earn interest on your balance</li>
+                <li>Earn 7% interest on your balance</li>
                 <li>Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#" class="btn btn-secondary">DM Nub for Details</a>
+                <a href="#signup-section" class="btn btn-secondary">Apply</a>
               </p>
             </div>
           </div>
+          <div class="col-md-6 mb-4 mb-lg-0 col-lg-3" data-aos="fade-up" data-aos-delay="200">
+            <div class="pricing">
+              <h3 class="text-center text-black">Nub Saver</h3>
+              <div class="price text-center mb-4 ">
+                <span><span>£99,999</span> / one off / 5% TX</span>
+              </div>
+              <ul class="list-unstyled ul-check success mb-5">
 
+                <li class="remove">Earn salary from your job</li>
+                <li class="remove">Make bets on current events</li>
+                <li class="remove">Invest and trade in assets</li>
+                <li>Earn <strong>30%</strong> interest on your balance</li>
+                <li class="remove">Run your business and pay zero tax on assets</li>
+              </ul>
+              <p class="text-center">
+                <a href="#signup-section" class="btn btn-primary">Apply</a>
+              </p>
+            </div>
+          </div>
         </div>
 
         <div class="row site-section" id="faq-section">
@@ -547,10 +567,11 @@
           <div class="col-lg-6">
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="text-black h4 mb-4">What can I actually do in Nub Bank?</h3>
+              <h3 class="text-black h4 mb-4">What can I do in Nub Bank?</h3>
               <p>There is an absolute litany of things possible through Nub Banks integrated system or by making
                 peer-to-peer transactions, to help get your creative juices flowing we've listed a few of our favourite
                 below:
+                <br>
                 <ul>
                   <li>Bribery</li>
                   <li>Design, Consulting or other Service Work</li>
@@ -575,26 +596,29 @@
             </div>
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="text-black h4 mb-4">Wait, you charge tax?</h3>
-              <p>Sure do, we charge tax based on the rates of Income Tax in the most recent passed budget on MHOC. We do
-                not simulate National Insurance or Capital Gains. Due to the volume and size of the
-                transactions that happen within our economy, we've have to implement a transaction fee *gasp*. You can
+              <h3 class="text-black h4 mb-4">Do I have to pay taxes?</h3>
+              <p>Sure do bucko! Tax is based on the rates of Income Tax in the most recent passed
+                budget on /r/MHOC. We do
+                not simulate National Insurance or Capital Gains. The bank does however charge a transaction fee. You
+                can
                 see a list of them above in the accounts summary. These can change, but everyone will be notified in
                 advance.</p>
             </div>
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="text-black h4 mb-4">Tell me about assets, how do they work?</h3>
-              <p>Players can buy, sell and build property to make money and accumulate assets. Assets are easily traded
+              <h3 class="text-black h4 mb-4">What is an asset? How does it work?</h3>
+              <p>Players can buy, sell and build assets to make money and accumulate net worth. Assets are easily traded
                 between players in any method they choose (selling, gifting, company takeover, auctions etc). Some
-                assets will generate an income, some will be purely value-based.
+                assets will generate a regular income, some will only have a sale value.
                 <br>
                 <br>
                 The value of an asset is determined by the market, when initially created a value will be provided by
                 Nub Bank, every time an asset switches hands the value will be updated as players must input the
                 buying price for the asset. Historic values will always tag with the asset, so if an asset has
                 sold for £1 you'll still be able to see it was originally worth £150,000. If you want an asset to be
-                valued before you sell it (to make sure it's still a fair value), speak to the bank staff.</p>
+                valued before you sell it (to make sure it's still a fair value), speak to the bank staff. The rental
+                income of an asset can be improved for an upfront investment (think of it like installing a new kitchen
+                so you can charge more rent)</p>
             </div>
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
@@ -604,21 +628,16 @@
                 Bank.
                 <br>
                 <br>
-                There will be some risk and some reward when it comes to property, regular income won't be shown to
-                anyone but
-                the owner and you will be taxed (classifications will be given to give you an idea) and eventually we
-                will move to simulate a whole asset market, with technology infrastructure letting us drop house
-                prices in Leeds, while boosting them in Glasgow.
-                <br>
-                <br>
-                Famous assets will be available but some will be restricted to certain accounts (The governing party
+                Eventually we will move to simulate a whole asset market, with technology infrastructure letting us drop
+                house prices in Leeds, while boosting them in Glasgow. Famous assets will be available but some will be
+                restricted to certain accounts (The governing party
                 will get 10 Downing Street for example).</p>
             </div>
           </div>
           <div class="col-lg-6">
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="text-black h4 mb-4">So whats this betting lark?</h3>
+              <h3 class="text-black h4 mb-4">What do you mean by betting?</h3>
               <p>Betting is the lifeblood of the British high street. Whether it be on sports, horse racing, politics or
                 major events the British population love a good wager. Nub Bank is happy to offer its customers an
                 exclusive betting system that is built into the website, for ease of use.
@@ -631,9 +650,10 @@
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
               <h3 class="text-black h4 mb-4">Will businesses need to file accounts?</h3>
-              <p>Businesses will need to file accounts at a yet to be determined interval. These accounts will help the
+              <p>Businesses will need to file accounts at a regular but not frequent interval. These accounts will help
+                the
                 bank with business valuation and general housekeeping. Businesses that do not submit in time will be
-                sanctioned. If you need an accountant, I'm sure there'll be a business for that!</p>
+                sanctioned. If you need an accountant, we're sure there'll be a business for that!</p>
             </div>
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
