--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   </ul>
                 </li>
                 <li><a href="https://bank.nub.international/" class="nav-link">Login</a></li>
-                <li><a href="#signup-section" class="nav-link">Sign-Up</a></li>
+                <li><a href="#application-section" class="nav-link">Apply for an Account</a></li>
               </ul>
             </nav>
           </div>
@@ -162,7 +162,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <figure class="circle-bg">
-              <img src="images/hero_1.jpg" alt="Our History" class="img-fluid">
+              <img src="https://i.imgur.com/1CPoQ9w.png" alt="Our History" class="img-fluid">
             </figure>
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -249,7 +249,7 @@
                 <ul class="social">
                   <li><a href="https://www.reddit.com/user/Ohprkl"><span class="icon-reddit"></span></a></li>
                 </ul>
-                <img src="images/ohprkl.jpg" alt="Image" class="img-fluid">
+                <img src="https://i.imgur.com/y30jutH.jpg" alt="Image" class="img-fluid">
               </figure>
               <div class="p-3">
                 <h3>Ohprkl</h3>
@@ -354,10 +354,10 @@
             <div class="owl-carousel slide-one-item-alt-text">
               <div>
                 <h2 class="section-title mb-3">01. Online Application</h2>
-                <p>All users start with a Basics account, to get one, use the sign up button below, which will fire off
+                <p>All users start with a Basics account, to get one, use the apply button below, which will fire off
                   your application to our team.</p>
 
-                <p><a href="#signup-section" class="btn btn-primary mr-2 mb-2">Sign Up</a></p>
+                <p><a href="#application-section" class="btn btn-primary mr-2 mb-2">Apply Now</a></p>
               </div>
               <div>
                 <h2 class="section-title mb-3">02. Wait for approval</h2>
@@ -493,7 +493,7 @@
                 <li class="remove">Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#signup-section" class="btn btn-secondary">Apply</a>
+                <a href="#application-section" class="btn btn-secondary">Apply</a>
               </p>
             </div>
           </div>
@@ -513,7 +513,7 @@
                 <li class="remove">Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#signup-section" class="btn btn-primary">Apply</a>
+                <a href="#application-section" class="btn btn-primary">Apply</a>
               </p>
             </div>
           </div>
@@ -533,7 +533,7 @@
                 <li>Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#signup-section" class="btn btn-secondary">Apply</a>
+                <a href="#application-section" class="btn btn-secondary">Apply</a>
               </p>
             </div>
           </div>
@@ -552,7 +552,7 @@
                 <li class="remove">Run your business and pay zero tax on assets</li>
               </ul>
               <p class="text-center">
-                <a href="#signup-section" class="btn btn-primary">Apply</a>
+                <a href="#application-section" class="btn btn-primary">Apply</a>
               </p>
             </div>
           </div>
@@ -801,7 +801,7 @@
     </section>
 
 
-    <section class="site-section bg-light" id="signup-section" data-aos="fade">
+    <section class="site-section bg-light" id="application-section" data-aos="fade">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
