--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
               <h3 class="text-black h4 mb-4">I don't understand how my wage is calculated?</h3>
               <p>Nub Bank works on an accelerated timescale, all you need to know (maths aside) is that one year in
-                MHOC/Nub Bank is roughly equal to 31 IRL days.</p>
+                MHOC/Nub Bank is roughly equal to 31 IRL days. All users are paid every day at about 6pm.</p>
             </div>
 
             <div class="mb-5" data-aos="fade-up" data-aos-delay="100">
